# joplin-api

./: .gitignore  README.md  requirements-dev.txt  setup.cfg  setup.py  test.py  tox.ini
.github/workflows/: pythonapp.yml
joplin_api/: __init__.py  core.py
tests/: conftest.py  test_folder.py  test_ping.py  test_resources.py
