[metadata]
name = joplin_api
description = "Joplin Editor - API"
author = FoxMaSk
author_email = foxmask@protonmail.com
maintainer = FoxMaSk
maintainer_email = foxmask@protonmail.com
url = https://github.com/foxmask/joplin-api
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD License
keywords = joplin web editor api
version = 1.4.0
classifiers =
	Development Status :: 4 - Beta
	Intended Audience :: Developers
	License :: OSI Approved :: BSD License
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Topic :: Internet
	Topic :: Communications
	Topic :: Database

[options]
packages = find:
zip_safe = false
include_package_data = true
install_requires =
	requests_async

[options.packages.find]
exclude =
	tests

[flake8]
max-line-length = 120
exclude = .tox,build,.eggs
ignore = F401

